[tool.poetry]
name = "wanted-chat"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "wanted_chat"}]

[tool.poetry.dependencies]
python = "^3.9"
krwordrank = "^1.0.3"
matplotlib = "^3.7.1"
pandas = "^1.5.3"
numpy = "^1.24.2"
konlpy = "^0.6.0"
wordcloud = "^1.8.2.2"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
